# stock-trading

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  REQUIREMENTS.md  pyproject.toml
.github/: pull_request_template.md
config/: manual_analyst_targets.csv  official_ir_sources.csv  portfolio_targets.json  research_evidence.csv  research_inputs.csv  research_source_integrations.csv  research_sources.csv  symbol_aliases.csv
docs/: DATA_GAP_WORK_REQUESTS.md  DATA_MAINTENANCE_BACKLOG.md  DECISION_MODES.md  FEEDBACK_BACKLOG.md  LOCAL_APP_STRATEGY.md  MODEL_LEARNING_STRATEGY.md  POST_WAVE_VALIDATION_LOG.md  PRODUCT_STRATEGY.md  PR_REVIEW_CHECKLIST.md  REGRESSION_STRATEGY.md  REQUIREMENTS_ROADMAP.md  ROADMAP_DECISION_LOG.md  ROADMAP_STATUS.md  SCORE_DRIVER_GLOSSARY.md  UX_EXPERIENCE.md  WAVE10_TACTICAL_REVIEW_REQUIREMENTS.md  WAVE11_MODEL_EVALUATION_REQUIREMENTS.md  WAVE12_ALERTS_REVIEW_TRIGGERS_REQUIREMENTS.md  WAVE13_MULTI_MODEL_SHADOW_REQUIREMENTS.md  WAVE14_BROKER_READONLY_REQUIREMENTS.md  WAVE7_HANDOFF.md  WAVE7_REQUIREMENTS.md  WAVE8_EARNINGS_REVIEW_REQUIREMENTS.md  WAVE9_LOCAL_CONSOLE_REQUIREMENTS.md
reports/: provider-coverage-audit.csv  provider-coverage-audit.md  provider-gap-action-plan.md
scripts/: __init__.py  add_feedback.py  add_trade_journal_entry.py  analysis.py  build_local_console_manifest.py  check_quality.py  cluster_evidence_events.py  curate_score_signals.py  curate_source_depth.py  engine_common.py  etrade_readonly.py  export_alerts.py  generate_ai_insight_briefs.py  generate_daily_report.py  generate_data_maintenance_backlog.py  (+29 more)
(+352 files in other folders)
